[package]
name = "prng-split"
version = "0.1.0"
edition = "2021"

[dependencies]
log = { version = "0.4.22" }
anyhow = "1.0.93"
bytesize = "1.3.0"
clap = { version = "4.5.21", features = ["derive"] }
clap-verbosity-flag = "2.2.3"
env_logger = "0.11.5"
rand = { version = "0.8.5", features = ["small_rng"] }
rangetools = "0.1.4"
thiserror = "2.0.3"
